--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.461.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
