--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.5.2",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "ng5-slider": "^1.1.14",
     "nodemon": "^1.18.11",
     "pagination": "^0.4.6",
