--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
+    "multer-storage-s3": "^1.1.1",
     "ng5-slider": "^1.1.14",
     "nodemon": "^1.18.11",
     "pagination": "^0.4.6",
