--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.0",
     "jsonwebtoken": "^8.5.1",
